# SpochanRanking

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  spochan.ini
certification/: admin.py  apps.py  models.py
certification/migrations/: 0001_initial.py  0002_initial.py  0003_alter_sportcertificationrecord_owner.py
chanbara/: admin.py  apps.py  models.py
chanbara/migrations/: 0001_initial.py  0002_grouptype.py
core/: admin.py  apps.py  models.py  personal_chancode.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_data_migration.py  0003_profile_chancode.py
core/sass/: _common.sass  _pythonvars.sass  main.sass
core/sass/sass-prefix-mixins/: README.md
core/sass/sass-prefix-mixins/scss/: _backgrounds.scss  _flexbox.scss  _forms.scss  _variables.scss  prefixes.scss
core/templates/: index.html  profile.html  z-frame.html
spochan_ranking/: __init__.py  settings.py  spochan_ranking.conf  spochan_ranking.ini  urls.py  wsgi.py
